<resources>
    <string name="app_name">KloudTV</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ContactMap">ContactMap</string>
    <string name="mtDocuments">From Team Documents</string>
    <string name="dialogue">Chat</string>
    <string name="service">Course</string>
    <string name="contact">Contact</string>
    <string name="community">Discover</string>
    <string name="personal_center">Profile</string>
    <string name="upcoming">Upcoming</string>
    <string name="pastdue">Past Due</string>
    <string name="pastfinish">Finish</string>
    <string name="mtNote">User Note</string>
    <string name="mtdelete">Delete</string>
    <string name="move">Move</string>
    <string-array name="tabname">
        <item>Chat</item>
        <item>Course</item>
        <item>Contact</item>
        <item>Discover</item>
        <item>Profile</item>
    </string-array>
    <string name="UserDetail">Personal Info</string>
    <string name="MemberDetail">老师详情</string>
    <string name="Published_Papers">Published Papers</string>
    <string name="Success_Case">成功案例</string>
    <string name="Evaluation">评价</string>
    <string name="ALLEvaluation">所有评价</string>
    <string name="Map_mode">地图模式</string>
    <string name="Customer">用户</string>
    <string name="Health_Consultant">好友</string>
    <string name="Phone">Phone</string>
    <string name="Address">Address</string>
    <string name="See_Info">See Info</string>
    <string name="Fouce_point">Fouce_point：</string>
    <string name="Descriptions">Descriptions：</string>
    <string name="Remarks">Add Remarks</string>
    <string name="Send_Message">Chat</string>
    <string name="Telephone">Telephone</string>
    <string name="Health_Dashboard">健康仪表盘</string>
    <string name="Personal_Information">个人资料</string>
    <string name="Medical_Report">体检报告</string>
    <string name="Users_Daily">用户日常</string>
    <string name="Healthy_exercise">健康操</string>
    <string name="All">总计</string>
    <string name="No_Medical_Report">他/她没有任何体检报告</string>
    <string name="Upload_Medical_Report">帮他/她上传</string>
    <string name="Search_Contact">Search</string>
    <string name="Cancel">Cancel</string>
    <string name="Back">Back</string>
    <string name="Reservation_information">Reservation information</string>
    <string name="Appointment">Appointment</string>
    <string name="See_Details">See Details</string>
    <string name="Consulting_Information">Consulting Information</string>
    <string name="Add_Group">Add member</string>
    <string name="Participants">Participants:</string>
    <string name="Common_used">Send File</string>
    <string name="Send_knowledge">Send knowledge</string>
    <string name="Send_File">Send File</string>
    <string name="New_Service">New Course</string>
    <string name="Send_Service">Send Course</string>
    <string name="Setting">Setting</string>
    <string name="Knowledge_Base">Knowledge Base</string>
    <string name="All_large_categories">All large categories</string>
    <string name="All_small_categories">All small categories</string>
    <string name="All_concerns">All concerns</string>
    <string name="Knowledge_Detail">Knowledge Detail</string>
    <string name="Edit_Send">Edit Send</string>
    <string name="Send_Link">Send Link</string>
    <string name="Login">Login</string>
    <string name="Input_Telephone">Please input your telephone number</string>
    <string name="Input_Password">Password, 6-16 characters, letters are case sensitive</string>
    <string name="Apply_To_Join">Apply To Join</string>
    <string name="Forget_Password">Forget Password</string>
    <string name="Login_Bottom">User License Agreement | Privacy Policy</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="Send_CheckCode">Send CheckCode</string>
    <string name="Resend_CheckCode">Resend CheckCode</string>
    <string name="Ensure_Reset">Ensure Reset</string>
    <string name="Sign_Up_Close">暂未开发注册请登录我们的网站www.youbao99.com,进入“健康顾问入口”提交资料，我们将第一时间进行资料审核</string>
    <string name="No_Data">No Data</string>
    <string name="No_networking">No_networking，please check the network connection</string>
    <string name="NETWORK_ERROR">NETWORK ERROR</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Forwarding">Forwarding</string>
    <string name="Sure">Sure</string>
    <string name="Create_User">创建用户</string>
    <string name="Care_User">此用户已有私人健康顾问，不允许创建</string>
    <string name="Cancel_Create">取消创建</string>
    <string name="Exit_group_chat">Quit group chat</string>
    <string name="Disbanded_group">Disbanded group</string>
    <string name="unnamed">unnamed</string>
    <string name="Modify_Group_Name">Modify Group Name</string>
    <string name="Write_Phone">Phone number (required)）</string>
    <string name="Name">Name（required）</string>
    <string name="Write_Local">Area（required）</string>
    <string name="Write_Sex">Sex</string>
    <string name="Write_Height">Height</string>
    <string name="Birthday">Birthday</string>
    <string name="Gallery">Gallery</string>
    <string name="Photo">Photo</string>
    <string name="Chat_Detail">Chat Detail</string>
    <string name="Group_Name">Group Name</string>
    <string name="Emptys_Chat">Clear chat history</string>
    <string name="Report">Report</string>
    <string name="group_chat">group chat</string>
    <string name="delete_friend">Delete contact</string>
    <string name="data_seeting">Data setting</string>
    <string name="delete_friend_prompt">Deleting contact will clear your chat history with contect</string>
    <string name="Become_UbaoMan">申请成为康人</string>
    <string name="Add_Service_Pop">抱歉，只有康人有创建服务单特权。申请成为康人，享受更多权益</string>
    <string name="Add_Customer_Pop">该用户将会在2周后被分配给其他康人。在2周内成为康人，您就可以拥有该用户了</string>
    <string name="Become_Success">你现在是康人了</string>
    <string name="Change_Remark_Success">Change Remark Success</string>
    <string name="Country_Code">Country Code</string>
    <string name="Course_invite">You are invited to join the meeting</string>
    <string name="Receive_Spectator">You have the ability to grab a man,
        you have the ability to open the door ah! Do not hide there, I know you are at home.</string>
    <string name="Receive_Course">天之道，损有余而补不足，是故虚胜实，不足胜有余。其意博，其理奥，其趣深，天地之象分，阴阳之候列，变化之由表，死生之兆彰，不谋而遗迹自同，勿约而幽明斯契，稽其言有微，验之事不忒，诚可谓至道之宗，奉生之始矣。假若天机迅发，妙识玄通，成谋虽属乎生知，标格亦资于治训，未尝有行不由送，出不由产者亦。然刻意研精，探微索隐，或识契真要，则目牛无全，故动则有成，犹鬼神幽赞，而命世奇杰，时时间出焉。</string>
    <string name="Chinese">中文</string>
    <string name="English">English</string>
    <string name="To_Chat">Select Chat</string>
    <string name="To_Chat_Top">No contact yet?Invite your friends now!</string>
    <string name="language">Language</string>
    <string name="course">My course Template</string>
    <string name="course2">System course Template</string>
    <string name="credit">Activity</string>
    <string name="saved">My Saved File</string>
    <string name="areas">Areas</string>
    <string name="about_me">About me</string>
    <string name="valid_membership">Valid membership</string>
    <string name="change_password">Change password</string>
    <string name="login_out">Log out</string>
    <string name="course_list">Your course list</string>
    <string name="create_group"> create_group</string>
    <string name="Modify">Modify</string>
    <string name="Register">Register</string>
    <string name="Next">Next</string>
    <string name="Register_success">Register success</string>
    <string name="nl_No_null">Name and area can not be null</string>
    <string name="Perfact_info">Perfact info</string>
    <string name="New_List">New friend</string>
    <string name="Start_chat">Start Chat</string>
    <string name="Create_Group">Create Group</string>
    <string name="Add_Friend">Add Friend</string>
    <string name="Is_exit">Whether to exit the current account</string>
    <string name="confirm_exit">confirm exit</string>
    <string name="clear">Clear</string>
    <string name="notify1">Join With Room ID</string>
    <string name="notify2">Join With Invite</string>
    <string name="ask_update_out">Whether to upload to my collection</string>
    <string name="ask_delete">Whether to delete </string>
    <string name="File">File</string>
    <string name="Save_File">Save File</string>
    <string name="Save_Success">Save Success</string>
    <string name="Klassroom_ID">Klassroom ID</string>
    <string name="Schedule">Schedule</string>
    <string name="MyKlassroom">My Klassroom</string>
    <string name="Input_ID">Input your course ID</string>
    <string name="Class_unexist">The class you joined does not exist</string>
    <string name="Modify_ID">Modify your klassroom Id</string>
    <string name="classroomid_occupied">classroomId is already occupied</string>
    <string name="start_peertime">Start</string>
    <string name="update">Update</string>
    <string name="update_message">Check to the new version, is updated？</string>
    <string name="Peertime_ID">Peertime ID: </string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Purchased_Courses">Purchased Courses</string>
    <string name="Gender">Gender</string>
    <string name="Head">Head</string>
    <string name="Password">Password</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="User_ID">User ID</string>
    <string name="I">I am</string>
    <string name="password_hint1">Please input password</string>
    <string name="password_hint2">Please input password again</string>
    <string name="name_hint">Please input name</string>
    <string name="UserID_hint">Please input User ID</string>
    <string name="password_warn">passwords must be the same and cannot be empty</string>
    <string name="Perfect">Perfect</string>
    <string name="Register_Success">Register Success</string>
    <string name="Name_nn">Name cannot be empty</string>
    <string-array name="Role">
        <item>Student</item>
        <item>Teacher</item>
        <item>Parent</item>
        <item>SchoolOwner</item>
    </string-array>
    <string name="Classroom">Classroom-</string>
    <string name="CP_Success">Password changed successfully</string>
    <string name="Finish">Finish</string>
    <string name="et_contact_remark">Edit contact remark</string>
    <string name="contact_remark">Contact remark</string>
    <string name="HasExisted">Account already exists. Please sign in directly.</string>
    <string name="UserNotExist">User not exist.</string>
    <string name="Choice">Choice</string>
    <string name="Albums">From albums</string>
    <string name="Uploading">Uploading</string>
    <string name="RoomName">meeting room device :</string>
    <string name="Register_notice">Click to register</string>
    <string name="RoomName_Null">RoomName cannot be null</string>
    <string name="My_QR">My QR code</string>
    <string name="selecttime">Please select Time</string>
    <string name="existclass">The class you are joining does not exist</string>
    <string name="select2">Select</string>
    <string name="year">Y</string>
    <string name="month">M</string>
    <string name="day">D</string>
    <string name="house">H</string>
    <string name="mintue">M</string>
    <string name="newService">New Course</string>
    <string name="join">Join Course</string>
    <string name="join2">Join</string>
    <string name="joinroom">Type in lesson ID</string>
    <string name="joinmyclass">Enter My Classroom</string>
    <string name="myklassid">ID:</string>
    <string name="satOptions">Select Audio Tool Options</string>
    <string name="satSystem">System</string>
    <string name="kCall">KloudCall</string>
    <string name="satExternal">External</string>
    <string name="satOn">Turn On</string>
    <string name="satOff">Turn Off</string>
    <string name="satOk">Ok</string>
</resources>