<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/meeting_setting_dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/rc_white_bg_shape"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="16dp">

        <TextView
            android:textColor="#191836"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:text="@string/satOptions" />
    </RelativeLayout>

    <LinearLayout
        android:gravity="center"
        android:id="@+id/layout_tab_titles"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/systembtn"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/satSystem"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/kloudcallbtn"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/kCall"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/externalbtn"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/satExternal"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="(skype,wechat...)"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_centerHorizontal="true"
            android:id="@+id/layout_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_micro"
                    android:padding="2dp"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/sound_on1" />

                <TextView
                    android:id="@+id/txt_micro"
                    android:textColor="#757486"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/satOn" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_camera"
                    android:padding="2dp"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/cam_off2" />

                <TextView
                    android:id="@+id/txt_camera"
                    android:textColor="#757486"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/satOff" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_recording"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/isOpenRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:checked="true"
                    android:text=""
                    android:textColor="@color/black" />

                <TextView
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:text="开启录制"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>



    </RelativeLayout>


    <LinearLayout
        android:layout_marginTop="19dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/txt_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/satOk"
            android:background="@drawable/bg_remote_meeting_confirm_nor"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider_line" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/txt_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/Cancel"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>