<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/Login"
        android:textColor="@color/darkgrey"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background="@color/lightgrey" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_atjoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Apply_To_Join"
                android:textColor="@color/newgrey"
                android:textSize="14sp" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/newgrey" />

            <TextView
                android:id="@+id/tv_fpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Forget_Password"
                android:textColor="@color/green"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Login_Bottom"
            android:textColor="@color/newgrey"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cphone"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="+86"
                android:textColor="@color/darkgrey"
                android:textSize="14sp" />

            <EditText
                android:imeOptions="flagNoExtractUi"
                android:id="@+id/et_telephone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/Input_Telephone"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/darkgrey"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:src="@drawable/passport" />

            <EditText
                android:imeOptions="flagNoExtractUi"
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/Input_Password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/darkgrey"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgrey" />

        <RelativeLayout
            android:id="@+id/rl_login"
            android:layout_width="800dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_height="75dp"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/login_greenback"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/Login"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_margin="13dp"
        android:layout_below="@id/layout_center"
        android:layout_marginTop="18dp"
        android:textSize="13sp"
        android:gravity="center"
        android:text="socket_info"
        android:id="@+id/txt_socket_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <FrameLayout
        android:id="@+id/fl_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55a2a8b6"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress_color" />
    </FrameLayout>


</RelativeLayout>
